Move backend to ligo-requests package

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,14 +48,9 @@ project_urls =
 packages = find:
 python_requires = >=3.6
 install_requires =
-    cryptography
-    requests
-    safe-netrc
+    ligo-requests
 tests_require =
     pytest
-    pytest-freezegun
-    pytest-httpserver
-    pytest-socket
 
 [options.package_data]
 gracedb_sdk.tests = data/*.xml
