--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 include:
   - project: emfollow/gitlab-ci-templates
     file: lint.yml
+  - project: emfollow/gitlab-ci-templates
+    file: sccb.yml
 
 # Build source distribution
 sdist:
@@ -59,6 +61,10 @@ pages:
     - master
   dependencies:
     - test
+
+# SCCB request
+sccb:
+  stage: deploy
 
 # Upload package to PyPI
 pypi:
