Track rename of ligo-requests to requests-gracedb

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ project_urls =
 packages = find:
 python_requires = >=3.6
 install_requires =
-    ligo-requests
+    requests-gracedb
 tests_require =
     pytest
 
