Rename package from gracedb_sdk to gracedb-sdk

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ omit =
     gracedb_sdk/tests/*
 
 [metadata]
-name = gracedb_sdk
+name = gracedb-sdk
 license = GPL-2+
 license_file = LICENSE.rst
 author = Leo Singer
