Fix yaml syntax error

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ bdist:
     paths:
       - '*.whl'
 
-.test: &test:
+.test: &test
   stage: test
   before_script:  # Install robot keytab for integration tests
     - apt-get update && apt-get install -y curl krb5-user xsltproc
