--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ omit =
 [metadata]
 name = gracedb-sdk
 license = GPL-2+
+license_file = LICENSE.md
 author = Leo Singer
 author_email = leo.singer@ligo.org
 description = REST API SDK for GraceDB
